--- a/microcommerce/src/main/resources/application.properties
+++ b/microcommerce/src/main/resources/application.properties
@@ -1,1 +1,8 @@
 server.port 9090
+
+# Configurations H2
+spring.jpa.show-sql=true
+spring.jpa.hibernate.ddl-auto=create-drop
+spring.jpa.generate-ddl=true
+spring.h2.console.enabled=true
+spring.datasource.url=jdbc:h2:mem:testdb;DB_CLOSE_DELAY=-1;DATABASE_TO_UPPER=false
